# repository-visualizer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  ai.py  cache.py  git_history.py  graph.py  intelligence.py  main.py  models.py  parsers.py  scanner.py
backend/repository_visualizer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_cache.py  test_git_intel.py  test_graph.py  test_languages.py  test_parsers.py  test_scanner.py
backend/tests/fixtures/sample_repo/app/: main.py  utils.py
backend/tests/fixtures/sample_repo/native/: local.h  main.c
backend/tests/fixtures/sample_repo/web/: App.tsx  Panel.tsx
docs/: demo-notes.md  dogfood.md
docs/dogfood/: flask-2026-06-30.md  three-repo-2026-06-30.md
docs/plans/: 2026-06-28-001-feat-large-repo-hardening-plan.md  2026-06-29-001-feat-product-completion-plan.md  2026-06-29-002-feat-package-cycles-plan.md  2026-06-29-003-feat-actionable-repo-intelligence-plan.md  2026-06-30-001-feat-dogfood-scale-accuracy-plan.md  2026-06-30-001-feat-repo-intelligence-plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/graph/: layout.ts  (+1 more)
frontend/tests/: graph-view.test.tsx  layout-flow.test.ts  layout-storage.test.ts  node-panel.test.tsx  repo-path-form.test.tsx  report-export.test.ts  repository-insights.test.tsx
(+7 files in other folders)
